# unifictl

./: .cargoignore  .gitignore  AGENTS.md  AI_AGENT_GUIDE.md  CRATES_IO_PUBLISH.md  Cargo.toml  EXAMPLES.md  IMPROVEMENTS.md  LICENSE  MISSING_ENDPOINTS.md  Makefile  PACKAGING_PLAN.md  QUICK_START.md  README.md  RELEASE_WORKFLOW_ISSUES.md  publish-crate.sh  test_all_endpoints.sh
.cargo/: config.toml
.github/workflows/: CRATES_IO_SETUP.md  README.md  build-arch.yml  ci.yml  homebrew-pr.yml  release.yml  test.yml
packaging/arch/: .SRCINFO  AUR_PUBLISH.md  COMPLIANCE.md  PKGBUILD  PKGBUILD.aur  update-aur.sh
packaging/homebrew/: HOMEBREW_SUBMISSION.md  README.md  update-formula.sh
packaging/homebrew/Formula/: unifictl.rb
packaging/winget/: README.md  unifictl.locale.en-US.yaml  unifictl.yaml  update-manifest.sh
src/: client.rs  config.rs  local.rs  main.rs  schema.rs
tests/: integration_test.rs
