[package]
name = "unifictl"
version = "0.2.0"
edition = "2024"
description = "CLI for UniFi Site Manager (API v1/EA)"
license = "MIT"
repository = "https://example.com/unifictl"
homepage = "https://example.com/unifictl"
authors = ["unifictl developers"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.18"
serde_path_to_error = "0.1.16"
serde_with = "3.9.0"
dirs = "5.0.1"
reqwest = { version = "0.12.9", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
thiserror = "1.0.69"

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.7.0"
predicates = "3.1.3"
tempfile = "3.14.0"

[package.metadata.deb]
maintainer = "unifictl developers <noreply@example.com>"
license-file = ["LICENSE", "0"]
extended-description = "A lightweight CLI for UniFi Site Manager (Site Manager API v1/EA)."
depends = ["ca-certificates", "libssl3 | libssl1.1", "openssl"]
assets = [
    ["target/release/unifictl", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/unifictl/README.md", "644"],
    ["LICENSE", "usr/share/doc/unifictl/LICENSE", "644"]
]

[package.metadata.generate-archlinux]
pkgname = "unifictl"
pkgdesc = "CLI for UniFi Site Manager (API v1/EA)"
license = ["MIT"]
url = "https://example.com/unifictl"
arch = ["x86_64", "aarch64"]
depends = ["openssl", "glibc"]
maintainer = "unifictl developers <noreply@example.com>"
bin = [{ path = "target/release/unifictl", install_path = "/usr/bin/unifictl" }]
